# password-manager

./: .gitignore  CMakeLists.txt  IMPROVEMENT_PLAN.md  README.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/pwman/: crypto.hpp  entry.hpp  generator.hpp  totp.hpp  vault.hpp
core/src/: crypto.cpp  generator.cpp  totp.cpp  vault.cpp
scripts/: demo.sh
tests/: CMakeLists.txt  test_base32.cpp  test_crypto.cpp  test_export_import.cpp  test_format_errors.cpp  test_generator_ambiguous.cpp  test_hardening.cpp  test_strength.cpp  test_totp.cpp  test_totp_verify.cpp  test_vault.cpp  test_vault_update.cpp
